--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "byte5digital/passgenerator",
+    "name": "byte5/passgenerator",
     "description": "A Laravel package to create Apple Wallet (old Passbook) compatible tickets.",
     "type": "library",
     "license": "GPL-3.0-or-later",
@@ -29,6 +29,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2",
+        "laravel/pint": "^1.22",
         "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
         "phpstan/phpstan": "^1.6",
         "phpunit/phpunit": "^9.3|^10.0",
