--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,8 +8,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: php-actions/composer@v6
-      - uses: php-actions/phpstan@v3
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.4'
+          extensions: zip, json, openssl
+
+      - name: Install Composer dependencies
+        uses: php-actions/composer@v6
+
+      - name: Run PHPStan
+        uses: php-actions/phpstan@v3
         with:
           path: src/
           memory_limit: 256M
