--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   INSTANCE: 'docs/pssgenerator-docs'
-  DOCKER_VERSION: '2025.04.8412.'
+  DOCKER_VERSION: '2025.04.8412'
   # IS_GROUP: 'true'  # Uncomment to build a group
 
 jobs:
