--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "ext-openssl": "*",
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
         "illuminate/filesystem": "^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
-        "thecodingmachine/safe": "^2.1"
+        "thecodingmachine/safe": "^2||^3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2",
